# hidrd

./: .gitignore  CMakeLists.bak  CMakeLists.txt  Makefile.am  README.md  build.sh  cmake-format  configure.ac  distcheck-all
android/: build.gradle  local.properties  settings.gradle
android/gradle-app/: CMakeLists.txt  build.gradle
android/gradle-app/src/main/: AndroidManifest.xml
android/gradle-app/src/main/java/com/claydonkey/hidrd/: FilePicker.java
android/gradle/wrapper/: gradle-wrapper.properties
android/hidrdinline/: CMakeLists.txt  build.gradle  local.properties
android/hidrdinline/src/main/: AndroidManifest.xml
android/hidrdinline/src/main/assets/: setupHidrd.sh
android/hidrdinline/src/main/cpp/: hidrd_jni.c  hidrd_jni.h
android/hidrdinline/src/main/java/com/claydonkey/hidrdinline/: FilePicker.java  MainActivity.java
android/hidrdinline/src/main/res/values/: strings.xml
android/hidrdtest/: CMakeLists.txt  build.gradle  hidrd.cmake  local.properties
android/hidrdtest/android/hidrdtest/: CMakeLists.txt
android/hidrdtest/src/androidTest/java/com/claydonkey/hidrdtest/: ExampleInstrumentedTest.java
android/hidrdtest/src/main/: AndroidManifest.xml
android/hidrdtest/src/main/assets/: setupHidrd.sh
android/hidrdtest/src/main/cpp/: blank.c  blank.h  hidrd_jni.c  hidrd_jni.h
android/hidrdtest/src/main/java/com/claydonkey/hidrdtest/: FilePicker.java  MainActivity.java  com_claydonkey_hidrdtest_FilePicker.h
android/hidrdtest/src/main/res/values/: strings.xml
android/hidrdtest/src/test/java/com/claydonkey/hidrdtest/: ExampleUnitTest.java
cmake/: hidrd-config.cmake.in  standalone-bootstrap.cmake
include/hidrd/: Makefile.am
include/hidrd/adr/: Makefile.am  adr.h
include/hidrd/fmt/xml/: Makefile.am
include/hidrd/util/: Makefile.am
lib/: Makefile.am
lib/adr/: adr.c
lib/fmt/xml/snk/: element.c
lib/util/: fd.c
nbproject/: configurations.xml  project.xml
nbproject/private/: arm-linux-armeabi.properties  configurations.xml  private.xml  x86_64-pc-linux-gnu.properties
src/: adr.c  adr.h  empty.c  empty.h  hidrd-convert.c
tools/: create_JNI_H.sh
tools/libxml2/: build.sh
tools/libxz/: build.sh
